offline overview and TSV

--- a/attendance/static/nav.html
+++ b/attendance/static/nav.html
@@ -19,6 +19,9 @@
         <a href="/admin/">Admin</a>
       </li>
       <li>
+        <a href="/overview.tsv">Download overview TSV</a>
+      </li>
+      <li>
         <a href="/history.tsv">Download history TSV</a>
       </li>
     </ul>
